# TidalSubsonic

./: .env.example  Cargo.toml  Dockerfile  README.md  flake.nix
.sqlx/: query-02d3004365debf97badd7f633ba5871e3944ffd0bb3386aef85c2438bd6f2354.json  query-0740dc1e8442c6a342da8999ef743aa919e328c93e0b7a5e00ed5771b3f7f3a6.json  query-0825d07a8b644ae6a5c2859d36bfbe0ff186db50b0a726284e8fd334b2a9594c.json  query-21df3f38ec984feac0d686fe0d2bd8851a6e493c80d6381862d30ac7fd2b5ee7.json  query-22d358cad51a983e05bbecc5a1a094b63ba39ace9e6b89beaf0a3d2f72c02a86.json  query-239f92b6ff26675ed62a8e66bac5769ac139150a697e65ab5bb6a45dae03b134.json  query-23ea1ae43936882e1fd1bcbc2e87a066fa77126c713ac12842a3dba90885f9a3.json  query-28bb3f1b5f4af6ce7f2bc98510814f6254548245d059f768c89006bd1ec0d612.json  query-2a7d882afb0a10e325a9a181d04b5f33d6eb2f872b80b0365ac41611c1994f46.json  query-2e75e43830d23750b34c4795de3d88b235eaac7718ed3dfac73f69609e2390c7.json  query-334b143f44433c2d754d6dd6bc09a0923fda01f2b7abdb7f1a0a001a7dd2c21b.json  query-378d819e832f5d6e69b1cf493d1a6744db415d932e9a6a6e2a415f8b291ca344.json  query-3f1e5c94162252aebff1d91066f14920e8f10e3cc093c7dd06e52eb5ca705561.json  query-40b90c602ae198ba56e5e9fe4fd30b2862968ac6979a20587c0c7b982cc09792.json  query-4213879dbc53272fd17551fa9ee1a2d4ed9cc048b73a5ebb3531eac72bcf62e0.json  query-44904d8edb7eac411e0b03328a7dd114f69f12f1015dc5c6387688831346ea15.json  query-49e98939446eb43021a0d7e2ef710ca2c7ff7ff5b6503ab4c5f180664dcfbe15.json  query-5b316ac5bf71e49b018ea7e55f4550d95fd59735ee4b138770bb7694abbd98ed.json  (+25 more)
migrations/: 20260411044738_init.sql  (+1 more)
(+38 files in other folders)
