[package]
name = "tss"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros"] }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
quick-xml = { version = "0.39.2", features = ["serialize"] }
urlencoding = "2.1.3"
serde_urlencoded = "0.7.1"
regex = "1.12"

actix-web = "4.13"
askama = { version = "0.15" }


dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

moka = { version = "0.12", features = ["future", "sync"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

thiserror = "2"


base64 = "0.22.1"
aes = "0.9"
cbc = "0.2"
ctr = "0.10"
hex = "0.4"
md5 = "0.8"
cipher = "0.5"
aes-gcm = "0.10.3"


chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["form", "json", "query", "rustls", "stream"] }

futures-util = "0.3.32"
rand = "0.10"
tokio-util = { version = "0.7", features = ["io"] }
async_zip = { version = "0.0.18", features = ["tokio", "deflate"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
